--- a/PlusLib/src/DataCollection/Testing/CMakeLists.txt
+++ b/PlusLib/src/DataCollection/Testing/CMakeLists.txt
@@ -28,6 +28,7 @@ SET_TESTS_PROPERTIES( TimestampFilteringTest PROPERTIES FAIL_REGULAR_EXPRESSION 
 #***************************  vtkDataCollectorTest1 ***************************
 ADD_EXECUTABLE(vtkDataCollectorTest1 vtkDataCollectorTest1.cxx)
 TARGET_LINK_LIBRARIES(vtkDataCollectorTest1 vtkDataCollection )
+
 ADD_TEST(vtkDataCollectorTest1 
   ${EXECUTABLE_OUTPUT_PATH}/vtkDataCollectorTest1
   --config-file=${ConfigFilesDir}/Testing/PlusDeviceSet_DataCollectionOnly_SavedDataset.xml 
@@ -61,24 +62,22 @@ ADD_TEST(vtkDataCollectorTest2
 SET_TESTS_PROPERTIES( vtkDataCollectorTest2 PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;WARNING" )
 
 #***************************  vtk3DDataCollectorTest1 ***************************
-IF (PLUS_USE_MMF_VIDEO AND PLUS_TEST_MMF_VIDEO)
 ADD_EXECUTABLE(vtk3DDataCollectorTest1 vtk3DDataCollectorTest1.cxx)
 TARGET_LINK_LIBRARIES(vtk3DDataCollectorTest1 vtkDataCollection )
 ADD_TEST(vtk3DDataCollectorTest1 
   ${EXECUTABLE_OUTPUT_PATH}/vtk3DDataCollectorTest1
   --config-file=${ConfigFilesDir}/Testing/PlusDeviceSet_DataCollectionOnly_3DSavedDataset.xml
   --minimum=0 
-  --maximum=255 
-  --mean=25.243336787840136 
-  --median=0 
-  --standard-deviation=57.955927672415285
+  --maximum=253
+  --mean=8.08658
+  --median=0
+  --standard-deviation=21.6785
   --xDimension=112
   --yDimension=112
   --zDimension=48
   --verbose=3
   )
 SET_TESTS_PROPERTIES( vtk3DDataCollectorTest1 PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;WARNING" )
-ENDIF(PLUS_USE_MMF_VIDEO AND PLUS_TEST_MMF_VIDEO)
 
 #***************************  vtkDataCollectorVideoAcqTest ***************************
 ADD_EXECUTABLE(vtkDataCollectorVideoAcqTest vtkDataCollectorVideoAcqTest.cxx)
@@ -93,9 +92,7 @@ TARGET_LINK_LIBRARIES(vtkDataCollectorVideoAcqTest vtkDataCollection )
 # ENDIF (PLUS_USE_ULTRASONIX_VIDEO)
 
 #***************************  vtkDataCollectorTest2 ***************************
-ADD_EXECUTABLE( ReplayRecordedDataTest
-  ReplayRecordedDataTest.cxx
-  )
+ADD_EXECUTABLE( ReplayRecordedDataTest ReplayRecordedDataTest.cxx )
 TARGET_LINK_LIBRARIES( ReplayRecordedDataTest vtkDataCollection ${VTK_LIBRARIES} )
 ADD_TEST( ReplayRecordedDataTest
   ${EXECUTABLE_OUTPUT_PATH}/ReplayRecordedDataTest
@@ -162,30 +159,38 @@ ADD_TEST(itkFcsvWriterTest1 ${EXECUTABLE_OUTPUT_PATH}/itkFcsvWriterTest1
 SET_TESTS_PROPERTIES( itkFcsvWriterTest1 PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;WARNING" )
 
 #***************************  vtkSonixVideoSourceTest1.cxx ***************************
-IF (PLUS_USE_ULTRASONIX_VIDEO AND PLUS_TEST_ULTRASONIX)
+IF (PLUS_USE_ULTRASONIX_VIDEO)
   ADD_EXECUTABLE(vtkSonixVideoSourceTest1 vtkSonixVideoSourceTest1.cxx )
   TARGET_LINK_LIBRARIES(vtkSonixVideoSourceTest1 vtkDataCollection vtkPlusCommon)
-  ADD_TEST(vtkSonixVideoSourceTest1 
-  ${EXECUTABLE_OUTPUT_PATH}/vtkSonixVideoSourceTest1
-    --rendering-off 
-    --config-file=${ConfigFilesDir}/Testing/PlusDeviceSet_SonixVideoSourceTest.xml
-    --sonix-ip=${PLUS_TEST_ULTRASONIX_IP_ADDRESS}
-  )
-  SET_TESTS_PROPERTIES( vtkSonixVideoSourceTest1 PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;WARNING" )
-ENDIF (PLUS_USE_ULTRASONIX_VIDEO AND PLUS_TEST_ULTRASONIX)
+  
+  IF (PLUS_TEST_ULTRASONIX)
+    ADD_TEST(vtkSonixVideoSourceTest1 
+    ${EXECUTABLE_OUTPUT_PATH}/vtkSonixVideoSourceTest1
+      --rendering-off 
+      --config-file=${ConfigFilesDir}/Testing/PlusDeviceSet_SonixVideoSourceTest.xml
+      --sonix-ip=${PLUS_TEST_ULTRASONIX_IP_ADDRESS}
+    )
+    SET_TESTS_PROPERTIES( vtkSonixVideoSourceTest1 PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;WARNING" )
+  ENDIF (PLUS_TEST_ULTRASONIX)
+  
+ENDIF (PLUS_USE_ULTRASONIX_VIDEO)
 
 #***************************  vtkPhilips3DProbeVideoSourceTest1.cxx ***************************
-IF (PLUS_USE_PHILIPS_3D_ULTRASOUND AND PLUS_TEST_PHILIPS_3D_ULTRASOUND)
+IF (PLUS_USE_PHILIPS_3D_ULTRASOUND)
   ADD_EXECUTABLE(vtkPhilips3DProbeVideoSourceTest1 vtkPhilips3DProbeVideoSourceTest1.cxx )
   TARGET_LINK_LIBRARIES(vtkPhilips3DProbeVideoSourceTest1 vtkDataCollection vtkPlusCommon)
-  ADD_TEST(vtkPhilips3DProbeVideoSourceTest1 
-  ${EXECUTABLE_OUTPUT_PATH}/vtkPhilips3DProbeVideoSourceTest1
-    --config-file=${ConfigFilesDir}/Testing/PlusDeviceSet_PhilipsVideoSourceTest.xml
-    --philips-ip=${PLUS_TEST_PHILIPS_3D_ULTRASOUND_IP_ADDRESS}
-	--verbose=3
-  )
-  SET_TESTS_PROPERTIES( vtkPhilips3DProbeVideoSourceTest1 PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;WARNING" )
-ENDIF (PLUS_USE_PHILIPS_3D_ULTRASOUND AND PLUS_TEST_PHILIPS_3D_ULTRASOUND)
+  
+  IF (PLUS_TEST_PHILIPS_3D_ULTRASOUND)
+    ADD_TEST(vtkPhilips3DProbeVideoSourceTest1 
+    ${EXECUTABLE_OUTPUT_PATH}/vtkPhilips3DProbeVideoSourceTest1
+      --config-file=${ConfigFilesDir}/Testing/PlusDeviceSet_PhilipsVideoSourceTest.xml
+      --philips-ip=${PLUS_TEST_PHILIPS_3D_ULTRASOUND_IP_ADDRESS}
+      --verbose=3
+    )
+    SET_TESTS_PROPERTIES( vtkPhilips3DProbeVideoSourceTest1 PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;WARNING" )
+  ENDIF (PLUS_TEST_PHILIPS_3D_ULTRASOUND)
+  
+ENDIF (PLUS_USE_PHILIPS_3D_ULTRASOUND)
 
 #***************************  vtkIntersonSDKCxxVideoSourceTest.cxx ***************************
 IF (PLUS_USE_INTERSONSDKCXX_VIDEO)
@@ -230,6 +235,7 @@ IF (PLUS_USE_BKPROFOCUS_VIDEO)
   #***************************  vtkBkProFocusOemVideoSourceTest.cxx ***************************
   ADD_EXECUTABLE(vtkBkProFocusOemVideoSourceTest vtkBkProFocusOemVideoSourceTest.cxx )
   TARGET_LINK_LIBRARIES(vtkBkProFocusOemVideoSourceTest vtkDataCollection vtkPlusCommon)
+
   IF (PLUS_TEST_BKPROFOCUS)
     ADD_TEST(vtkBkProFocusOemVideoSourceTest 
       ${EXECUTABLE_OUTPUT_PATH}/vtkBkProFocusOemVideoSourceTest
@@ -242,6 +248,7 @@ IF (PLUS_USE_BKPROFOCUS_VIDEO)
   IF (PLUS_USE_BKPROFOCUS_CAMERALINK)
     ADD_EXECUTABLE(vtkBkProFocusCameraLinkVideoSourceTest vtkBkProFocusCameraLinkVideoSourceTest.cxx )
     TARGET_LINK_LIBRARIES(vtkBkProFocusCameraLinkVideoSourceTest vtkDataCollection vtkPlusCommon)
+
     IF (PLUS_TEST_BKPROFOCUS)
       ADD_TEST(vtkBkProFocusCameraLinkVideoSourceTest 
         ${EXECUTABLE_OUTPUT_PATH}/vtkBkProFocusCameraLinkVideoSourceTest
@@ -249,6 +256,7 @@ IF (PLUS_USE_BKPROFOCUS_VIDEO)
         )
       SET_TESTS_PROPERTIES( vtkBkProFocusCameraLinkVideoSourceTest PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;WARNING" )
     ENDIF (PLUS_TEST_BKPROFOCUS)
+
   ENDIF (PLUS_USE_BKPROFOCUS_CAMERALINK)
   
 ENDIF (PLUS_USE_BKPROFOCUS_VIDEO)
@@ -298,11 +306,15 @@ ENDIF (PLUS_USE_INTERSON_VIDEO)
 IF (PLUS_USE_TELEMED_VIDEO)
   ADD_EXECUTABLE(vtkTelemedVideoSourceTest vtkTelemedVideoSourceTest.cxx )
   TARGET_LINK_LIBRARIES(vtkTelemedVideoSourceTest vtkDataCollection )
-  ADD_TEST(vtkTelemedVideoSourceTest
-    ${EXECUTABLE_OUTPUT_PATH}/vtkTelemedVideoSourceTest
-    #--rendering-off
-    )
-  SET_TESTS_PROPERTIES( vtkTelemedVideoSourceTest PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;WARNING" )
+
+  IF (PLUS_TEST_TELEMED)
+    ADD_TEST(vtkTelemedVideoSourceTest
+      ${EXECUTABLE_OUTPUT_PATH}/vtkTelemedVideoSourceTest
+      --rendering-off
+      )
+    SET_TESTS_PROPERTIES( vtkTelemedVideoSourceTest PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;WARNING" )
+  ENDIF (PLUS_TEST_TELEMED)
+
 ENDIF (PLUS_USE_TELEMED_VIDEO)
 
 #***************************  vtkThorLabsVideoSourceTest.cxx ***************************
