--- a/PlusLib/src/PlusConfigure.h.in
+++ b/PlusLib/src/PlusConfigure.h.in
@@ -98,6 +98,8 @@
 
 #cmakedefine PLUS_USE_SIMPLE_TIMER
 
+#cmakedefine PLUS_USE_INTEL_MKL
+
 #define PLUS_ULTRASONIX_SDK_MAJOR_VERSION @PLUS_ULTRASONIX_SDK_MAJOR_VERSION@
 #define PLUS_ULTRASONIX_SDK_MINOR_VERSION @PLUS_ULTRASONIX_SDK_MINOR_VERSION@
 #define PLUS_ULTRASONIX_SDK_PATCH_VERSION @PLUS_ULTRASONIX_SDK_PATCH_VERSION@
