--- a/PlusLib/CMakeLists.txt
+++ b/PlusLib/CMakeLists.txt
@@ -44,11 +44,12 @@ OPTION(BUILD_TESTING
 
 # Need subversion for the automatic update of the repository
 find_package(Subversion)
-IF(Subversion_FOUND)
-  Subversion_WC_INFO(${CMAKE_CURRENT_SOURCE_DIR} PLUSLIB_SVN_INFO)
-  MESSAGE(STATUS "Current revision is ${PLUSLIB_SVN_INFO_WC_REVISION}") 
-  SET(PLUSLIB_REVISION ${PLUSLIB_SVN_INFO_WC_REVISION})
-ENDIF(Subversion_FOUND)
+# IF(Subversion_FOUND)
+  # Subversion_WC_INFO(${CMAKE_CURRENT_SOURCE_DIR} PLUSLIB_SVN_INFO)
+  # MESSAGE(STATUS "Current revision is ${PLUSLIB_SVN_INFO_WC_REVISION}") 
+  # SET(PLUSLIB_REVISION ${PLUSLIB_SVN_INFO_WC_REVISION})
+# ENDIF(Subversion_FOUND)
+SET(PLUSLIB_REVISION "4225")
 
 SET( PLUSLIB_SVN_EXECUTABLE ${Subversion_SVN_EXECUTABLE} )
 
