ENH: Removed some CMake ouput from PlusLib and PlusApp.
ENH: Deleted .svn folders again because apparently they are not necessary when setting a fake revision number in PlusApp and PlusLib.

--- a/PlusApp/CMakeLists.txt
+++ b/PlusApp/CMakeLists.txt
@@ -72,7 +72,9 @@ FIND_PACKAGE(Subversion)
   # SET(PLUSAPP_REVISION ${PLUSAPP_SVN_INFO_WC_REVISION})
 # ENDIF(Subversion_FOUND) 
 # SET( PLUSAPP_SVN_EXECUTABLE ${Subversion_SVN_EXECUTABLE} )
-SET(PLUSAPP_REVISION "4225")
+
+# Fake revision number since we are not using the PLUS trunk but our own repo
+SET(PLUSAPP_REVISION "4225") 
 
 # Standard CMake option for building libraries shared or static by default.
 OPTION(BUILD_SHARED_LIBS
